# objects_grasping

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: grasp.rviz
data/: trajectory_waypoints copy.txt  trajectory_waypoints.txt  trajectory_waypoints_good1.txt
include/: manipulation_class.hpp  perception_class.hpp
launch/: anygrasp_multi_objects_grasp.launch
src/actions/: closeGripper.cpp  getCurrentState.cpp  getTransfrom.cpp  goDown.cpp  goTemp.cpp  goTop.cpp  lastJointRotate.cpp  move.cpp  openGripper.cpp  planToGoalPose.cpp  reachAnygrasp.cpp  setTargetPose.cpp
src/functions/: gpd.cpp  manipulation_class.cpp  perception_class.cpp
src/nodes/: angrasp_object_grasping.cpp  gpd_grasping_node.cpp  initial.cpp
